# GameOfLife

./: .editorconfig  CMakeLists.txt
src/: GameOfLifeMap.cpp  GameOfLifeMap.h  IDisposable.h  main.cpp
